<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>

        <variable
            name="qr"
            type="com.azamat.data.model.QuizResult" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/backgroundColor">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="338dp"
            android:layout_height="90dp"
            android:layout_marginStart="18dp"
            android:background="?attr/backgroundColor"
            android:paddingBottom="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="RtlSymmetry">

            <TextView
                android:id="@+id/result_tv_category"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:background="?attr/backgroundColor"
                android:text="@string/category_mixed"
                android:textColor="?attr/whiteText"
                android:textSize="17sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/result_iv_more"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="20dp"
                android:background="?attr/backgroundColor"
                android:src="@drawable/ic_more_horiz"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/result_tv_correct"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:background="?attr/backgroundColor"
                android:text="@string/correct_answers_8_10"
                android:textColor="?attr/correctA"
                android:textSize="12sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/result_iv_more" />

            <TextView
                android:id="@+id/result_tv_difficulty"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:background="?attr/backgroundColor"
                android:text="@string/difficulty_easy"
                android:textColor="?attr/whiteText"
                android:textSize="12sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/result_tv_correct" />

            <TextView
                android:id="@+id/result_tv_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="?attr/backgroundColor"
                android:text="@string/_12_may_2019_20_32"
                android:textColor="?attr/whiteText"
                android:textSize="9sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/result_iv_more"
                tools:ignore="SmallSp" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
