<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>

        <variable
            name="mv"
            type="com.azamat.ui.fragment.main.MainViewModel" />

        <variable
            name="v"
            type="android.view.View" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?attr/backgroundColor"
        tools:context=".ui.fragment.main.MainFragment"
        tools:ignore="MissingConstraints,RedundantNamespace, ContentDescription,HardcodedText">


        <TextView
            android:id="@+id/main_tv_Quiz"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="35dp"
            android:background="?attr/backgroundColor"
            android:text="@string/quiz"
            android:textColor="?attr/whiteText"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/main_iv_kub"
            android:layout_width="50dp"
            android:layout_height="75dp"
            android:layout_marginTop="54.2dp"
            android:background="@drawable/ic_svg_kub"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/main_tv_Quiz" />

        <TextView
            android:id="@+id/main_tv_QuestionsAmount"
            android:layout_width="117dp"
            android:layout_height="16dp"
            android:layout_marginStart="67dp"
            android:layout_marginTop="40dp"
            android:background="?attr/backgroundColor"
            android:text="@string/questions_amount"
            android:textColor="?attr/whiteText"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/main_iv_kub" />

        <TextView
            android:id="@+id/main_tv_ten"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?attr/backgroundColor"
            android:text="1"
            android:textColor="?attr/whiteText"
            android:textSize="15sp"
            app:layout_constraintStart_toEndOf="@+id/main_tv_QuestionsAmount"
            app:layout_constraintTop_toTopOf="@+id/main_tv_QuestionsAmount" />


        <Button
            android:id="@+id/main_iv_plus"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginTop="9dp"
            android:textColor="@color/whiteText"
            android:text="+"
            android:background="@drawable/round_corner"
            android:onClick="@{(v)-> mv.plus()}"
            app:layout_constraintEnd_toStartOf="@+id/main_tv_ten"
            app:layout_constraintTop_toBottomOf="@+id/main_tv_QuestionsAmount" />

        <Button
            android:id="@+id/main_iv_minus"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginTop="9dp"
            android:text="-"
            android:textColor="@color/whiteText"
            android:background="@drawable/round_corner"
            android:onClick="@{(v)-> mv.minus()}"
            app:layout_constraintStart_toEndOf="@+id/main_tv_ten"
            app:layout_constraintTop_toBottomOf="@+id/main_tv_QuestionsAmount" />

        <SeekBar
            android:id="@+id/main_seekBar"
            android:layout_width="240dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="17dp"
            android:background="?attr/backgroundColor"
            android:max="20"
            android:progress="1"
            android:theme="@style/SeekBarColor"
            app:layout_constraintStart_toStartOf="@+id/main_tv_QuestionsAmount"
            app:layout_constraintTop_toBottomOf="@+id/main_iv_plus" />

        <TextView
            android:id="@+id/main_tv_Category"
            android:layout_width="81dp"
            android:layout_height="16dp"
            android:layout_marginTop="23dp"
            android:background="?attr/backgroundColor"
            android:text="Category"
            android:textColor="?attr/whiteText"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="@+id/main_seekBar"
            app:layout_constraintTop_toBottomOf="@+id/main_seekBar" />

        <Spinner
            android:id="@+id/main_spinner_first"
            android:layout_width="240dp"
            android:layout_height="48dp"
            android:layout_marginTop="5dp"
            android:background="?attr/backgroundColor"
            android:entries="@array/levelCategory"
            app:layout_constraintStart_toStartOf="@+id/main_tv_Category"
            app:layout_constraintTop_toBottomOf="@+id/main_tv_Category" />

        <TextView
            android:id="@+id/main_tv_Difficulty"
            android:layout_width="81dp"
            android:layout_height="16dp"
            android:layout_marginTop="9dp"
            android:background="?attr/backgroundColor"
            android:text="Difficulty"
            android:textColor="?attr/whiteText"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="@+id/main_spinner_first"
            app:layout_constraintTop_toBottomOf="@+id/main_spinner_first" />

        <Spinner
            android:id="@+id/main_spinner_second"
            android:layout_width="240dp"
            android:layout_height="48dp"
            android:layout_marginTop="5dp"
            android:background="?attr/backgroundColor"
            android:entries="@array/levelCategory"
            app:layout_constraintStart_toStartOf="@+id/main_tv_Difficulty"
            app:layout_constraintTop_toBottomOf="@+id/main_tv_Difficulty" />

        <Button
            android:id="@+id/main_btn_start"
            android:layout_width="200dp"
            android:layout_height="48dp"
            android:background="@drawable/round_corner"
            android:text="@string/start"
            android:textColor="?attr/backgroundColor"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/main_spinner_second" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
